--- a/boards/shields/lily58_MP/lily58_MP.dtsi
+++ b/boards/shields/lily58_MP/lily58_MP.dtsi
@@ -6,7 +6,7 @@
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
-#include <lily58_MP.dtsi>
+#include <layouts/kata0510/lily58.dtsi>
 
 / {
     chosen {
